tests/fails/f5.t
if not require("fail") then return end
terra foo(a : int, a : int)
    
end
foo(2,4)
